@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: configure.ac,v 1.14 2004/03/11 21:04:39 dun Exp $
+## $Id: configure.ac,v 1.15 2004/03/11 21:17:04 dun Exp $
 ##*****************************************************************************
 ## Process this file with autoconf to produce a configure script.
 ##*****************************************************************************
@@ -117,7 +117,6 @@ AC_REPLACE_FUNCS( \
   strlcat \
   strlcpy \
 )
-X_AC_LTLIBOBJS
 
 ##
 # Epilogue.
