@@ -1,5 +1,9 @@
 2004-03-11  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* configure.ac, config/x_ac_ltlibobjs.m4:
+	  Removed munging of LIBOBJS & LTLIBOBJS for automake & libtool.
+	  Refer to autoconf docs 15.6.4: AC_LIBOBJ vs. LIBOBJS.
+
 	* Makefile.in, aclocal.m4, configure, configure.ac, config/config.h.in,
 	  config/x_ac_check_cond_lib.m4, src/Makefile.in, src/etc/Makefile.in,
 	  src/libcommon/Makefile.in, src/libcommon/common.h,
